--- a/index.html
+++ b/index.html
@@ -1,12 +1,119 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Мишка</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>Главная</title>
+</head>
 
-  </body>
+<body>
+  <header class="page-header">
+    <nav class="main-nav">
+      <div class="main-nav__logo"><img src="http://placehold.it/86x35" width="86" height="35" alt="Mishka"></div>
+      <nav class="main-nav__toggle">Открыть меню</nav>
+    </nav>
+
+    <div class="header-image">
+      <h1 class="header-image__slogan">Милые штуки ручной работы для дома</h1>
+    </div>
+
+    <div class="sub-nav">
+      <ul class="sub-nav__items">
+        <li class="sub-nav__item-interior"><a class=sub-nav__link href="#">Предметы интерьера</a></li>
+        <li class="sub-nav__item-toys"><a class=sub-nav__link href="#">Детские игрушки</a></li>
+      </ul>
+    </div>
+  </header>
+
+  <section class="most-popular">
+    <h2 class="most-popular__item-title">Вязаные корзинки</h2>
+    <b class="most-popular__badge">Товар недели</b>
+    <p class="most-popular__item-desc">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+
+    <table class="most-popular__table">
+      <tr>
+        <td class="most-popular__table-desc">Цвет:</td>
+        <td class="most-popular__table-value">«Тиффани»/серый</td>
+      </tr>
+      <tr>
+        <td class="most-popular__table-desc">Диаметр:</td>
+        <td class="most-popular__table-value">25 см</td>
+      </tr>
+      <tr>
+        <td class="most-popular__table-desc">Высота:</td>
+        <td class="most-popular__table-value">15 см</td>
+      </tr>
+    </table>
+
+    <div class="most-popular__photo">
+      <img src="http://placehold.it/260x315" width="260" height="315" alt="Фотография вязаной корзинки">
+    </div>
+
+    <b class="most-popular__price">Цена: 990 руб.</b>
+    <a class="most-popular__order btn" href="#">Заказать</a>
+  </section>
+
+  <section class="about-us">
+    <h2 class="about-us__title">Коротко о нас</h2>
+    <ul class="about-us__features-list">
+      <li class="about-us__feature-eco">Экологически чистые материалы</li>
+      <li class="about-us__feature-scandinavian">Скандинавский стиль по российской цене</li>
+      <li class="about-us__feature-likes">Увеличивает лайки на фотографиях</li>
+      <li class="about-us__feature-handmade">Связано вручную с любовью и умилением</li>
+      <li class="about-us__feature-patriot">Поддержка отечественного производителя</li>
+      <li class="about-us__feature-package">Поставляется в подарочной упаковке</li>
+    </ul>
+  </section>
+
+  <section class="reviews">
+    <h2 class="reviews__title">Отзывы</h2>
+    <blockquote class="reviews__item">
+      <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+      <cite class="reviews__author">Анастасия Красильникова</cite>
+      <span class="reviews__author-username">@misssssiskras</span>
+    </blockquote>
+    <button class="reviews__prev-item" type="button">Предыдущий отзыв</button>
+    <button class="reviews__next-item" type="button">Следующий отзыв</button>
+    <a class="reviews__write-review" href="#">Написать</a>
+  </section>
+
+  <footer class="page-footer">
+    <div class="page-footer__contacts">
+      <h2 class="page-footer__contacts-title">Контакты</h2>
+      <table class="page-footer__table">
+        <tr>
+          <td class="page-footer__table-desc">e-mail:</td>
+          <td class="page-footer__table-value">info@mimimishkashop.ru</td>
+        </tr>
+        <tr>
+          <td class="page-footer__table-desc">адрес: </td>
+          <td class="page-footer__table-value">г. Санкт-Петербург,<br>ул. Большая Конюшенная,<br>д. 19/8,<br>офис 101</td>
+        </tr>
+      </table>
+    </div>
+
+    <div class="page-footer__map">
+      Карта
+    </div>
+
+    <a class="page-footer__contact-us btn" href="#">Напишите нам</a>
+
+    <div class="page-footer__social">
+      <ul class="page-footer__social-links">
+        <li class="page-footer__social-link"><a class="social-link-instagram" href="#">Интсаграм</a></li>
+        <li class="page-footer__social-link"><a class="social-link-facebook" href="#">Фейсбук</a></li>
+        <li class="page-footer__social-link"><a class="social-link-twitter" href="#">Твиттер</a></li>
+      </ul>
+    </div>
+
+    <div class="page-footer__copyright">
+      <p class="page-footer__copyright-text">
+        Разработано
+        <a class="page-footer__copyright-logo" href="#">HTML Academy</a>
+      </p>
+    </div>
+  </footer>
+
+</body>
+
 </html>
