Добавил изменения в index.html и form.html в соответствие с замечаниями

--- a/form.html
+++ b/form.html
@@ -23,8 +23,8 @@
 
     <form class="order-form" action="https://echo.htmlacademy.ru/" method="post">
 
-      <div class="order-form__type">
-        <h2 class="order-form-title">Тип</h2>
+      <div class="order-form-item">
+        <h2 class="order-form-item-title">Тип</h2>
         <ul class="order-form__type-group">
           <li class="order-form__type-item">
             <input type="radio" name="accessory" id="accessory">
@@ -37,8 +37,8 @@
         </ul>
       </div>
 
-      <div class="order-form__color">
-        <h2 class="order-form-title">Цвет</h2>
+      <div class="order-form-item">
+        <h2 class="order-form-item-title">Цвет</h2>
         <ul class="order-form__color-group">
           <li class="order-form__color-item">
             <input type="checkbox" name="white" id="white">
@@ -67,8 +67,8 @@
         </ul>
       </div>
 
-      <div class="order-form__fullname">
-        <h2 class="order-form-title">Фио</h2>
+      <div class="order-form-item">
+        <h2 class="order-form-item-title">Фио</h2>
         <div class="order-form__fullname-group">
           <label for="first-name">Имя:</label>
           <input type="text" name="first-name" id="first-name" placeholder="Введите ваше имя*" required>
@@ -85,22 +85,22 @@
         </div>
       </div>
 
-      <div class="order-form__phone">
-        <h2 class="order-form-title">Тел</h2>
+      <div class="order-form-item">
+        <h2 class="order-form-item-title">Тел</h2>
         <div class="order-form__phone-input">
           <input type="tel" name="phone" id="phone" placeholder="+7 ХХХ ХХ ХХ*" required>
         </div>
       </div>
 
-      <div class="order-form__email">
-        <h2 class="order-form-title">E-mail</h2>
+      <div class="order-form-item">
+        <h2 class="order-form-item-title">E-mail</h2>
         <div class="order-form__email-input">
           <input type="email" name="email" id="email" placeholder="Ваш Email*" required>
         </div>
       </div>
 
-      <div class="order-form__extra-info">
-        <h2 class="order-form-title">Доп</h2>
+      <div class="order-form-item">
+        <h2 class="order-form-item-title">Доп</h2>
         <div class="order-form__extra-info-item">
           <textarea name="extra" id="extra" placeholder="Опишите все ваши пожелания к заказу"></textarea>
         </div>
