--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
   <section class="about-us">
     <h2 class="about-us__title">Коротко о нас</h2>
     <ul class="about-us__features-list">
-      <li class="about-us__feature-eco">Экологически чистые материалы</li>
-      <li class="about-us__feature-scandinavian">Скандинавский стиль по российской цене</li>
-      <li class="about-us__feature-likes">Увеличивает лайки на фотографиях</li>
-      <li class="about-us__feature-handmade">Связано вручную с любовью и умилением</li>
-      <li class="about-us__feature-patriot">Поддержка отечественного производителя</li>
-      <li class="about-us__feature-package">Поставляется в подарочной упаковке</li>
+      <li class="about-us__feature--eco">Экологически чистые материалы</li>
+      <li class="about-us__feature--scandinavian">Скандинавский стиль по российской цене</li>
+      <li class="about-us__feature--likes">Увеличивает лайки на фотографиях</li>
+      <li class="about-us__feature--handmade">Связано вручную с любовью и умилением</li>
+      <li class="about-us__feature--patriot">Поддержка отечественного производителя</li>
+      <li class="about-us__feature--package">Поставляется в подарочной упаковке</li>
     </ul>
   </section>
 
@@ -74,7 +74,7 @@
     </blockquote>
     <button class="reviews__prev-item" type="button">Предыдущий отзыв</button>
     <button class="reviews__next-item" type="button">Следующий отзыв</button>
-    <a class="reviews__write-review" href="#">Написать</a>
+    <a class="reviews__write-review btn" href="#">Написать</a>
   </section>
 
   <footer class="page-footer">
