В index.html модификатору добавлен отсутствоваший класс

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
   <section class="about-us">
     <h2 class="about-us__title">Коротко о нас</h2>
     <ul class="about-us__features-list">
-      <li class="about-us__feature--eco">Экологически чистые материалы</li>
-      <li class="about-us__feature--scandinavian">Скандинавский стиль по российской цене</li>
-      <li class="about-us__feature--likes">Увеличивает лайки на фотографиях</li>
-      <li class="about-us__feature--handmade">Связано вручную с любовью и умилением</li>
-      <li class="about-us__feature--patriot">Поддержка отечественного производителя</li>
-      <li class="about-us__feature--package">Поставляется в подарочной упаковке</li>
+      <li class="about-us__feature about-us__feature--eco">Экологически чистые материалы</li>
+      <li class="about-us__feature about-us__feature--scandinavian">Скандинавский стиль по российской цене</li>
+      <li class="about-us__feature about-us__feature--likes">Увеличивает лайки на фотографиях</li>
+      <li class="about-us__feature about-us__feature--handmade">Связано вручную с любовью и умилением</li>
+      <li class="about-us__feature about-us__feature--patriot">Поддержка отечественного производителя</li>
+      <li class="about-us__feature about-us__feature--package">Поставляется в подарочной упаковке</li>
     </ul>
   </section>
 
